-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2, 5.15.5, 6.2.0 RC
-
Windows 10
-
-
772ca0167fa3fb63209cb510eadab915695a2b5c (qt/tqtc-qtdeclarative/5.15)
It came up when I use HoverHandler inside of delegate of Repeater and reduce model size.
HoverHandler.hovered property stays true even if the mouse cursor is not really hover the delegate anymore.
Reproducible samples and video have been attached.
In the app, use shortcut Ctrl+W to add an Item and Ctrl+E to remove it.
| For Gerrit Dashboard: QTBUG-95798 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 383731,2 | Ensure that HoverHandler isn't hovered after HoverLeave to parent item | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | -1 | 0 |