Ensure that HoverHandler isn't hovered after HoverLeave to parent item

Fixes: QTBUG-95798
Change-Id: I6142d63c1d82248493e02cdeb0e1abafcaa7798e
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>